<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_name">Calls Blacklist</string>
    <string name="account_type">com.vladlee.callsblacklist</string>
    <string name="account_type_label">Calls Blacklist</string>
    <string name="add">Add</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="all_calls">All calls</string>
    <string name="all_calls_voip">All calls while VoIP is established</string>
    <string name="all_sms">All SMS</string>
    <string name="alphanumeric">alphanumeric</string>
    <string name="app_name">Calls Blacklist</string>
    <string name="app_start">App start</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="available_in_pro">Available in PRO version</string>
    <string name="black_list">Blacklist</string>
    <string name="block_all_option">Block all calls</string>
    <string name="block_all_sms_option">Block SMS from all senders</string>
    <string name="block_all_voip_option">Block all calls while audio chat or VoIP call is established</string>
    <string name="block_calls_summary">Block calls</string>
    <string name="block_hidden_option">Block private numbers</string>
    <string name="block_sender">Block this sender?</string>
    <string name="block_senders">Block these senders?</string>
    <string name="block_sms_non_numeric_option">Block SMS from non-numeric numbers</string>
    <string name="block_sms_option">Block SMS from senders of blacklist</string>
    <string name="block_sms_summary">Block SMS</string>
    <string name="block_unknown_option">Block all numbers except contacts</string>
    <string name="blocked_account">Spam</string>
    <string name="blocked_calls">Log</string>
    <string name="blocking">Enable blocking</string>
    <string name="blocking_calls_off">Calls blocking is OFF</string>
    <string name="blocking_calls_on">Calls blocking is ON</string>
    <string name="blocking_disabled">Blocking is disabled</string>
    <string name="blocking_enabled">Blocking is enabled</string>
    <string name="blocking_off_by_schedule">Blocking is OFF by schedule</string>
    <string name="blocking_on_by_schedule">Blocking is ON by schedule</string>
    <string name="blocking_settings">Blocking</string>
    <string name="blocking_settings_menu_item">Blocking settings</string>
    <string name="blocking_sms_off">SMS blocking is OFF</string>
    <string name="blocking_sms_on">SMS blocking is ON</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call">Call</string>
    <string name="call_blocked">Incoming call blocked</string>
    <string name="call_blocking_method">Call blocking method</string>
    <string name="calls_log">Calls log</string>
    <string name="calls_settings">Calls</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="click_view">Click to view log</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">11e1bd4c-f8a3-4a6f-8a26-32bc71fd0543</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_delete_all">Are you sure you want to clear the blacklist?</string>
    <string name="confirm_delete_all_calls">Are you sure you want to clear the log?</string>
    <string name="confirm_delete_conversation">Do you really want to delete conversation?</string>
    <string name="contacts">Contacts</string>
    <string name="contains">contains</string>
    <string name="contains_text">Message contains text</string>
    <string name="copy">Copy</string>
    <string name="default_phone_app_message">"To provide compliance with Google Play permissions policy:
%s
it is required to set this app as \"default phone app\".

It will not affect on using of other phone apps."</string>
    <string name="default_web_client_id">9538381276-l6urg8gnqkdto7mm0dpgtfl6sj5h1ilm.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_conversation">Delete this conversation?</string>
    <string name="delete_conversations">Delete these conversations?</string>
    <string name="delete_message">Delete this message?</string>
    <string name="delete_messages">Delete these messages?</string>
    <string name="delete_number">Delete this number?</string>
    <string name="delete_numbers">Delete these numbers?</string>
    <string name="delete_record">Delete this record?</string>
    <string name="delete_records">Delete these records?</string>
    <string name="download">Download</string>
    <string name="enable_blacklist">Enable blacklist</string>
    <string name="enable_blocking">Enable</string>
    <string name="enter">Enter</string>
    <string name="entered_incorrect_code">You entered incorrect password</string>
    <string name="expand_button_title">Advanced</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="file">File</string>
    <string name="file_load_confirm_dialog">Do really want to load this file?</string>
    <string name="file_load_dialog">"Blacklist backup has been detected.
Do you want to load it or select another file?"</string>
    <string name="file_loaded">File has been loaded</string>
    <string name="file_loading_error">File loading error</string>
    <string name="friday">Friday</string>
    <string name="hidden_numbers">Private numbers</string>
    <string name="hide_blocked_messages">Hide blocked messages</string>
    <string name="hide_blocked_messages_summary">Hide text of blocked messages</string>
    <string name="monday">Monday</string>
    <string name="non_numeric_numbers">Non-numeric numbers</string>
    <string name="notification_blocking">Blocking</string>
    <string name="notification_blocking_summary">Notify about blocking</string>
    <string name="notification_incoming">Incoming SMS</string>
    <string name="notification_incoming_summary">Notify about incoming SMS</string>
    <string name="notification_settings">Notifications</string>
    <string name="option_password_on_start">Password on app start</string>
    <string name="other_apps">Other applications</string>
    <string name="other_apps_summary">Try also other apps of the developer.</string>
    <string name="password_settings">Password protection</string>
    <string name="review_text">"Do you like this app? 
Please, rate it."</string>
    <string name="saturday">Saturday</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_by_day_of_week">By days of the week</string>
    <string name="schedule_from">From</string>
    <string name="schedule_to">To</string>
    <string name="setup_pin_code">Setup password</string>
    <string name="share">Share</string>
    <string name="share_summary">Do you want to share this app with your friends?</string>
    <string name="show_notifications_option">Show notifications</string>
    <string name="show_status_bar_icon">Show icon in status bar</string>
    <string name="sms_settings">SMS</string>
    <string name="status_bar_icon">Status bar icon</string>
    <string name="submit_review">Rate the app</string>
    <string name="sunday">Sunday</string>
    <string name="support">Support</string>
    <string name="support_summary">Please write to support@vlmob.com if you have any questions.</string>
    <string name="thursday">Thursday</string>
    <string name="tuesday">Tuesday</string>
    <string name="unknown_numbers">Unknown numbers</string>
    <string name="wednesday">Wednesday</string>
    <string name="whitelist">Whitelist</string>
    <string name="whitelist_summary">Never blocked numbers</string>
</resources>