<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="pref_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:icon="@drawable/ic_blacklist" android:title="@string/blocking_settings" android:key="pref_blocking_settings">
        <com.vladlee.preferences.PreferenceSwitch android:persistent="true" android:title="@string/calls_settings" android:key="pref_block_calls_option" android:summary="@string/enable_blacklist" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/hidden_numbers" android:key="pref_block_hidden_calls" android:summary="@string/block_hidden_option" android:dependency="pref_block_calls_option" android:defaultValue="false" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/unknown_numbers" android:key="pref_block_unknown_calls" android:summary="@string/block_unknown_option" android:dependency="pref_block_calls_option" android:defaultValue="false" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/all_calls" android:key="pref_block_all_calls" android:summary="@string/block_all_option" android:dependency="pref_block_calls_option" android:defaultValue="false" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/all_calls_voip" android:key="pref_block_all_calls_if_voip" android:summary="@string/block_all_voip_option" android:dependency="pref_block_calls_option" android:defaultValue="false" />
        <com.vladlee.preferences.PreferenceSwitch android:persistent="true" android:title="@string/sms_settings" android:key="pref_block_sms_option" android:summary="@string/enable_blacklist" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/unknown_numbers" android:key="pref_block_unknown_sms" android:summary="@string/block_unknown_option" android:dependency="pref_block_sms_option" android:defaultValue="false" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/non_numeric_numbers" android:key="pref_block_non_numeric_sms" android:summary="@string/block_sms_non_numeric_option" android:dependency="pref_block_sms_option" android:defaultValue="false" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/all_sms" android:key="pref_block_all_sms" android:summary="@string/block_all_sms_option" android:dependency="pref_block_sms_option" android:defaultValue="false" />
    </PreferenceScreen>
    <com.vladlee.preferences.PreferenceSwitch android:icon="@drawable/ic_show_icon" android:persistent="true" android:title="@string/status_bar_icon" android:key="pref_show_status_bar_icon" android:summary="@string/show_status_bar_icon" android:defaultValue="true" />
    <PreferenceScreen android:icon="@drawable/ic_schedule" android:title="@string/schedule" android:key="pref_schedule_settings">
        <com.vladlee.preferences.PreferenceSwitch android:persistent="true" android:title="@string/schedule" android:key="pref_schedule_enable" android:defaultValue="false" />
        <Preference android:persistent="true" android:title="@string/schedule_from" android:key="pref_schedule_enable_from" android:dependency="pref_schedule_enable" />
        <Preference android:persistent="true" android:title="@string/schedule_to" android:key="pref_schedule_enable_to" android:dependency="pref_schedule_enable" />
        <com.vladlee.preferences.PreferenceSwitch android:persistent="true" android:title="@string/schedule_by_day_of_week" android:key="pref_schedule_by_day_of_week" android:summary="@string/available_in_pro" android:dependency="pref_schedule_enable" android:defaultValue="false" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/monday" android:key="pref_schedule_monday" android:dependency="pref_schedule_by_day_of_week" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/tuesday" android:key="pref_schedule_tuesday" android:dependency="pref_schedule_by_day_of_week" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/wednesday" android:key="pref_schedule_wednesday" android:dependency="pref_schedule_by_day_of_week" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/thursday" android:key="pref_schedule_thursday" android:dependency="pref_schedule_by_day_of_week" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/friday" android:key="pref_schedule_friday" android:dependency="pref_schedule_by_day_of_week" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/saturday" android:key="pref_schedule_saturday" android:dependency="pref_schedule_by_day_of_week" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/sunday" android:key="pref_schedule_sunday" android:dependency="pref_schedule_by_day_of_week" android:defaultValue="true" />
    </PreferenceScreen>
    <Preference android:icon="@drawable/ic_whitelist" android:persistent="true" android:title="@string/whitelist" android:key="pref_whitelist" android:summary="@string/whitelist_summary" />
    <PreferenceScreen android:icon="@drawable/ic_password" android:title="@string/password_settings" android:key="pref_password_settings" android:summary="@string/available_in_pro">
        <com.vladlee.preferences.PreferenceSwitch android:persistent="true" android:enabled="true" android:title="@string/option_password_on_start" android:key="pref_password_on_start" android:summary="@string/available_in_pro" android:defaultValue="false" />
        <Preference android:persistent="true" android:enabled="false" android:title="@string/setup_pin_code" android:key="pref_setup_password" />
    </PreferenceScreen>
    <PreferenceScreen android:icon="@drawable/ic_notifications" android:persistent="false" android:title="@string/notification_settings" android:key="pref_notifications">
        <com.vladlee.preferences.PreferenceSwitch android:persistent="true" android:title="@string/notification_settings" android:key="pref_show_notifications" android:summary="@string/show_notifications_option" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/notification_blocking" android:key="pref_show_notifications_blocking" android:summary="@string/notification_blocking_summary" android:dependency="pref_show_notifications" android:defaultValue="true" />
        <com.vladlee.preferences.PreferenceCheckBox android:persistent="true" android:title="@string/notification_incoming" android:key="pref_show_notifications_incoming" android:summary="@string/notification_incoming_summary" android:dependency="pref_show_notifications" android:defaultValue="true" />
    </PreferenceScreen>
    <PreferenceScreen android:icon="@drawable/ic_log" android:persistent="false" android:title="@string/blocked_calls" android:key="pref_log_settings">
        <com.vladlee.preferences.PreferenceSwitch android:persistent="true" android:title="@string/hide_blocked_messages" android:key="pref_hide_blocked_messages" android:summary="@string/hide_blocked_messages_summary" android:defaultValue="true" />
    </PreferenceScreen>
    <Preference android:icon="@drawable/ic_support" android:persistent="false" android:title="@string/support" android:key="pref_support" android:summary="@string/support_summary" />
    <Preference android:icon="@drawable/ic_review" android:persistent="false" android:title="@string/submit_review" android:key="pref_submit_review" android:summary="@string/review_text" />
    <Preference android:icon="@drawable/ic_share" android:persistent="false" android:title="@string/share" android:key="pref_share" android:summary="@string/share_summary" />
    <Preference android:icon="@drawable/ic_other_apps" android:persistent="false" android:title="@string/other_apps" android:key="pref_other_apps" android:summary="@string/other_apps_summary" />
</PreferenceScreen>