<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@color/primary_panel" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.SwitchCompat android:textColor="@color/tabs_selected" android:id="@id/switchPanelCallBlock" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/calls_settings" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:switchPadding="4.0dip" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textColor="@color/tabs_selected" android:gravity="start|center" android:id="@id/checkboxHiddenCalls" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checked="false" android:text="@string/hidden_numbers" android:layoutDirection="rtl" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="10.0dip" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textColor="@color/tabs_selected" android:gravity="start|center" android:id="@id/checkboxUnknownCalls" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checked="false" android:text="@string/unknown_numbers" android:layoutDirection="rtl" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="10.0dip" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textColor="@color/tabs_selected" android:gravity="start|center" android:id="@id/checkboxAllCalls" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checked="false" android:text="@string/all_calls" android:layoutDirection="rtl" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="10.0dip" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textColor="@color/tabs_selected" android:gravity="start|center" android:id="@id/checkboxAllCallsVoIP" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checked="false" android:text="@string/all_calls_voip" android:layoutDirection="rtl" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="10.0dip" />
        <View android:background="@color/primary_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="10.0dip" />
        <androidx.appcompat.widget.SwitchCompat android:textColor="@color/tabs_selected" android:id="@id/switchPanelSmsBlock" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/sms_settings" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:switchPadding="4.0dip" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textColor="@color/tabs_selected" android:gravity="start|center" android:id="@id/checkboxUnknownSms" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checked="false" android:text="@string/unknown_numbers" android:layoutDirection="rtl" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="10.0dip" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textColor="@color/tabs_selected" android:gravity="start|center" android:id="@id/checkboxNonNumeric" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:checked="false" android:text="@string/non_numeric_numbers" android:layoutDirection="rtl" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="10.0dip" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textColor="@color/tabs_selected" android:gravity="start|center" android:id="@id/checkboxAllSms" android:paddingLeft="10.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="10.0dip" android:checked="false" android:text="@string/all_sms" android:layoutDirection="rtl" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="10.0dip" />
        <LinearLayout android:orientation="vertical" android:background="@color/primary" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageButton android:id="@id/btnCollapse" android:background="?android:selectableItemBackground" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:src="@drawable/ic_expand_less" android:scaleType="fitEnd" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>